   deleted docs correctly (Mikhail Khludnev via Mike
   McCandless).

 * LUCENE-3794: DirectoryTaxonomyWriter could lose the INDEX_CREATE_TIME 
   property if multiple commits with userData were done. It now always records 
   the creation time in the taxonomy index commitData, and reads it from the 
   index in the constructor. (Shai Erera)
   
Documentation

 * LUCENE-3599: Javadocs for DistanceUtils.haversine() were incorrectly 
   stating the expected order of the arguments (David Smiley via hossman)

======================= Lucene 3.5.0 ================

Changes in backwards compatibility policy

 * LUCENE-3446: Removed BooleanFilter.finalResult() due to change to
   FixedBitSet.  (Uwe Schindler)

 * LUCENE-3508: Changed some method signatures in decompounding TokenFilters
   to make them no longer use the Token class.  (Uwe Schindler)
   
 * LUCENE-3557: The various SpellChecker.indexDictionary methods were removed,
   and consolidated to one:

   indexDictionary(Dictionary dict, IndexWriterConfig config, boolean optimize)
   
   Previously, there was no way to specify an IndexWriterConfig, and some
   of these methods would sneakily pass 'true' to optimize.  (Robert Muir)
   
 * LUCENE-3558: Moved NRTManager & NRTManagerReopenThread into lucene core 
   o.a.l.search. (Simon Willnauer)
   
 * LUCENE-2564: WordListLoader is now flaged as @lucene.internal. All methods in
   WordListLoader now return CharArraySet/Map and expect Reader instances for 
   efficiency. Utilities to open Readers from Files, InputStreams or Java 
   resources were added to IOUtils. (Simon Willnauer, Robert Muir)

 * LUCENE-3552: Renamed LuceneTaxonomyReader/Writer to DirectoryTR/TW. (Shai Erera)

 * LUCENE-3556: DirectoryTaxonomyWriter's indexWriter is now private and 
   openIndexWriter() now returns an IndexWriter. (Shai Erera)

New Features

 * LUCENE-1824: Add BoundaryScanner interface and its implementation classes,